# mistral-parler

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SDD.md  SPEC.md  TESTING.md  agents.md  pyproject.toml
.codex/skills/: _index.md  contract-reconciliation.md  mistral-pipeline.md  orchestrator-and-cli.md  test-driven-delivery.md  vertical-slice-implementation.md
.github/workflows/: ci.yml  publish.yml
features/: README.md  caching.feature  cli_interface.feature  decision_extraction.feature  error_handling.feature  multilingual.feature  output_formats.feature  speaker_attribution.feature  transcription.feature
features/steps/: __init__.py  extraction_steps.py
parler/: __init__.py  __main__.py  cli.py  config.py  models.py
parler/attribution/: __init__.py  attributor.py  resolver.py
parler/audio/: __init__.py  ffmpeg.py  ingester.py
parler/extraction/: __init__.py  cache.py  deadline_resolver.py  extractor.py  parser.py
parler/local/: __init__.py  voxtral.py
parler/pipeline/: __init__.py  orchestrator.py  state.py
parler/prompts/: __init__.py  attribution.py  extraction.py
parler/rendering/: renderer.py
parler/transcription/: __init__.py  assembler.py  assembly.py  attributor.py  cache.py  quality.py  transcriber.py
parler/tui/: app.py  app.tcss
parler/util/: __init__.py  retry.py  serialization.py
parler/utils/: __init__.py  retry.py
rfcs/: README.md  RFC-0001-architecture-and-pipeline.md  RFC-0002-voxtral-multilingual-transcription.md  RFC-0003-decision-extraction-schema.md  RFC-0004-speaker-attribution.md  RFC-0005-report-format-and-export.md
tests/: README.md  conftest.py  smoke_test.py
tests/benchmarks/: test_performance.py
tests/e2e/: test_earnings_call.py  test_full_pipeline_bilingual.py  test_full_pipeline_fr.py
tests/fixtures/: README.md
tests/fixtures/decision_logs/: fr_meeting_5min_expected.json
tests/integration/: test_cache_behavior.py  test_export_integrations.py  test_mistral_extraction.py  test_retry_behavior.py  test_voxtral_integration.py
tests/property/: test_deadline_resolver_properties.py  test_parsing_properties.py
tests/unit/: test_audio_ingestion.py  test_chunk_assembly.py  test_cli_commands.py  test_config_loading.py  test_deadline_resolution.py  test_deadline_resolution_parametrized.py  test_decision_extraction_parsing.py  test_local_voxtral_runtime.py  test_pipeline_orchestration.py  test_report_rendering.py  test_speaker_attribution.py  test_transcript_quality.py
